--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 </nav>
   <div class="wrapper">
     <div class="total">
-      <div class="total">Your total is: $<span id="total">0</span></div>
+      <div class="total">Your Total Amount is: $<span id="total">0</span></div>
     </div>
 
     <div class="form">
